# Music-Predictor

./: .dockerignore  .gitignore  LICENSE  README.md  baseline.md  checkpoints.md  dataset.md  docker-compose.yml  faq.md  pyproject.toml  train.md
.streamlit/: config.toml
backend_data/: __init__.py  example.json
config/: config.yml  config_docker.yml
config/grafana/dashboards/: Service Logs.json
config/loki/: retention-config.yaml
docs/: swagger.json  swagger.yaml
music_predictor_backend/: app.py  main.py
music_predictor_backend/dto/: MusicDTO.py  TextDTO.py
music_predictor_backend/models/: multilabel_model.py
music_predictor_backend/repository/: ModelSpectogramRepo.py  SpectogramRepo.py  TextRepo.py  WhisperRepo.py
music_predictor_backend/routes/v1/: MusicRouter.py  TextRouter.py
music_predictor_backend/services/: MusicService.py  TextService.py
music_predictor_backend/settings/: settings.py
music_predictor_backend/src/: utils.py
music_predictor_streamlit/: app.py  client.py  mock_backend.py
music_predictor_streamlit/dto/: dto.py
music_predictor_streamlit/service/: ModelPredictor.py  ModelTrainer.py  Service.py  eda.py  introduction.py  service.py  utils.py
music_predictor_streamlit/service/spectrogram/: ModelPredictor.py  eda.py
music_predictor_streamlit/service/text/: TextEda.py  (+3 more)
music_predictor_streamlit/settings/: settings.py
notebooks/Bagantsova/: Baseline_model.ipynb  Music_predict_EDA.ipynb  SIFT_Classification.ipynb  images_metadata_short.json
notebooks/Kovel/: Music_predict_EDA.ipynb  requiremnts.txt  ytmusicapi.ipynb
notebooks/Pervushin/: app_class.py  df_pred.csv  requirements.txt  song_lyrics_20241211.ipynb  song_lyrics_20241211.py
(+19 files in other folders)
