[tool.poetry]
name = "music_predictor_backend"
version = "0.1.0"
description = ""
authors = ["Kovel Alexander <xanderkovel@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.115.6"
uvicorn = {extras = ["standard"], version = "^0.32.0"}
aiohttp = "^3.11.10"
pydantic-settings = "^2.6.1"
pydantic = "^2.10.3"
loguru = "^0.7.3"
python-multipart = "^0.0.19"


[tool.poetry.group.test.dependencies]
pytest = "8.2.1"
pytest-asyncio = "0.23.7"

[tool.poetry.group.dev.dependencies]
black = "24.4.2"
isort = "5.13.2"
flake8 = "7.1.1"
pre-commit = "3.8.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
